--- a/ItFuture/Pages/Index.cshtml
+++ b/ItFuture/Pages/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "IT Future - Выкторины для всех";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="img-container">
+        <img class = "img" src = "ItFuture/wwwroot/images/ITFuture.png">
+    </div>
+
 </div>
