--- a/ItFuture/wwwroot/css/site.css
+++ b/ItFuture/wwwroot/css/site.css
@@ -1,22 +1,147 @@
-html {
-  font-size: 14px;
+* {
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+header{
+  display: flex;
+  width: 100%;
+  flex-flow: column nowrap; 
+  justify-content: center;
+  align-items: center;
+  background-color: #2c52a5;
+}
+.header-container {
+  height: 130px;
+  width: 98%;
+  display: flex;
+  flex-flow: row nowrap; 
+  justify-content: space-between;
+  align-items: center;
+  background-color: #2c52a5;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+.logo-container{
+  padding-left: 5px;
+  height: 80%;
+  width: 30%;
+  display: flex;
+  flex-flow: row nowrap; 
+  justify-content: start;
+  align-items: flex-end;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+.logo-png {
+  height: 100%;
+  width: auto;
 }
 
-body {
-  margin-bottom: 60px;
+.buttons-container {
+  height: 80%;
+  width: 40%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content:flex-end; 
+  align-items: flex-end;
+}
+
+.button-ms{
+  text-decoration: none;
+  font-family: 'Oswald',Arial,sans-serif;        
+  background:#325EBD;
+  height:47px;
+  width: 130px;
+  border:4px solid #082567;
+  border-radius:25px;
+  margin-left: 25px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  text-align: center;
+}
+
+.button-ms:hover{
+  background:#173983;
+  border:4px solid #051a4b;
+}
+
+.button-ms >p{
+  font-weight: 900;
+  font-size:large;
+  font-style: Impact, fantasy;
+  color: #E0BE00;
+}
+
+.button-ms >p:hover{
+  color: #dbc85a;
+}
+
+.button-profile{
+  background:#325EBD;
+  height:47px;
+  width:47px;
+  border:4px solid #082567;
+  border-radius:50%;
+  margin-left: 35px;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.button-profile:hover{
+  background:#173983;
+  border:4px solid #051a4b;
+}
+
+.icon-profile{
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+.footer-container{
+  background-color: #eb1a1a;
+}
+
+
+.border {
+  height: 84px;
+  width: 100%;
+  background-color: #2c52a5;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.border-box{
+  height: 70px;
+  width:  98%;
+  background-color: #E0BE00;
+  border-radius:25px;
+}
+
+.text-center{
+  margin-left: 20px;;
+  height: 140px;
+  width:  400px;
+  border-radius:25px;
+  background-color: #a52c9b;
+}
+
+.img-container{
+  height: 100%;
+  width: 200px;
+  background-color: #20b48f;
+}
+
+.img{
+  height: 100%;
+  width: auto;
 }
